[project]
name = "chatllm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dragove", email = "dragove@qq.com" }
]
dependencies = [
    "transformers>=4.33.3",
    "torch>=2.0.1",
    "tiktoken>=0.5.1",
    "einops>=0.7.0",
    "transformers_stream_generator>=0.0.4",
    "accelerate>=0.23.0",
    "optimum>=1.13.2",
    "auto-gptq>=0.4.2",
    "langchain>=0.0.27",
    "fastapi>=0.103.2",
    "uvicorn>=0.23.2",
    "openai>=0.28.1",
    "pydantic>=2.4.2",
    "sse-starlette>=1.6.5",
    "pypdf>=3.16.2",
    "sentence_transformers>=2.2.2",
    "chromadb>=0.4.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
